[gd_scene load_steps=3 format=2]

[ext_resource path="res://Store/Store.gd" type="Script" id=1]
[ext_resource path="res://Store/ShopCard.tscn" type="PackedScene" id=2]

[node name="Store" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 32.0

[node name="MyItemsButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_top = 6.0
margin_right = 73.0
margin_bottom = 26.0
size_flags_vertical = 4
text = "My Items"

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 77.0
margin_right = 917.0
margin_bottom = 32.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 840.0
margin_bottom = 14.0
text = "Store"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BudgetLabel" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 840.0
margin_bottom = 32.0
text = "Current Budget: "
align = 1

[node name="DoneButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 921.0
margin_top = 6.0
margin_right = 1024.0
margin_bottom = 26.0
size_flags_vertical = 4
text = "Start Next Day"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 32.0
margin_right = 1024.0
margin_bottom = 444.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="ItemContainer" type="GridContainer" parent="VBoxContainer/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 392.0
custom_constants/vseparation = 20
custom_constants/hseparation = 20
columns = 3

[node name="ShopCard" parent="VBoxContainer/MarginContainer/ItemContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 314.0
margin_bottom = 176.0
size_flags_horizontal = 3
size_flags_vertical = 2
alignment = 1

[node name="ShopCard2" parent="VBoxContainer/MarginContainer/ItemContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 334.0
margin_right = 648.0
margin_bottom = 176.0
size_flags_horizontal = 3
size_flags_vertical = 2
alignment = 1

[node name="ShopCard3" parent="VBoxContainer/MarginContainer/ItemContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 668.0
margin_right = 982.0
margin_bottom = 176.0
size_flags_horizontal = 3
size_flags_vertical = 2
alignment = 1

[node name="ShopCard4" parent="VBoxContainer/MarginContainer/ItemContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 196.0
margin_right = 314.0
margin_bottom = 372.0
size_flags_horizontal = 3
size_flags_vertical = 2
alignment = 1

[node name="ShopCard5" parent="VBoxContainer/MarginContainer/ItemContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 334.0
margin_top = 196.0
margin_right = 648.0
margin_bottom = 372.0
size_flags_horizontal = 3
size_flags_vertical = 2
alignment = 1

[node name="ShopCard6" parent="VBoxContainer/MarginContainer/ItemContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 668.0
margin_top = 196.0
margin_right = 982.0
margin_bottom = 372.0
size_flags_horizontal = 3
size_flags_vertical = 2
alignment = 1
[connection signal="pressed" from="VBoxContainer/HBoxContainer/MyItemsButton" to="." method="_on_MyItemsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/DoneButton" to="." method="_on_DoneButton_pressed"]
